shop, search, 404, filters

--- a/src/scss/blocks/_home_history.scss
+++ b/src/scss/blocks/_home_history.scss
@@ -3,8 +3,7 @@
 
 .home-history {
   position: relative;
-  padding: 5rem 0; // 80px
-  background: #fff;
+  padding: 5rem 0;
   overflow: hidden;
 
   &::after {
