--- a/src/scss/woocommerce/_index.scss
+++ b/src/scss/woocommerce/_index.scss
@@ -3,5 +3,6 @@
 @forward 'cart';
 @forward 'woocommerce';
 @forward 'checkout';
+@forward 'filters';
 @forward 'offcanvas-cart';
 @forward 'notifications';
