--- a/src/scss/blocks/_home-hero.scss
+++ b/src/scss/blocks/_home-hero.scss
@@ -60,6 +60,7 @@
     margin: 0 auto;
     padding: 1rem;
     height: 100%;
+    max-width: 100%;
   }
 
   &__content {
@@ -201,12 +202,13 @@
     min-height: 95vh;
   }
 
-  @media (max-width: 991px) {
+  @media (max-width: 1200px) {
     .home-hero {
+
       &__boxes {
         position: static;
         margin-top: 1.5rem;
-        flex-wrap: wrap;
+
       }
       &__inner {
         position: static;
@@ -217,6 +219,44 @@
         margin: 0 auto;
         padding: 1rem;
         height: 100%;
+      }
+    }
+  }
+  @media (max-width: 767px) {
+    .home-hero {
+      &__inner {
+        padding-bottom: 2rem;
+        max-width: 100%;
+      }
+      &__content {
+        padding: 18vh 0 1vh;
+      }
+      &__boxes {
+        position: static;
+        margin-top: 1.5rem;
+        overflow-x: auto;
+        padding-bottom: 8px;
+        &::-webkit-scrollbar-track {
+          background: #fcfcfc;
+        }
+
+        &::-webkit-scrollbar-thumb {
+          background: $secondary-color;
+          border-radius: 4px;
+        }
+
+        &::-webkit-scrollbar-thumb:hover {
+          background: $secondary-color;
+        }
+
+        &::-webkit-scrollbar {
+          height: 3px;
+        }
+        .hero-box{
+          flex: 1;
+          flex-basis: auto;
+          flex-shrink: 0;
+        }
       }
     }
   }
