--- a/src/scss/blocks/_inner-hero.scss
+++ b/src/scss/blocks/_inner-hero.scss
@@ -60,6 +60,7 @@
     margin: 0 auto;
     padding: 1rem;
     height: 100%;
+    max-width: 100%;
   }
 
   &__content {
@@ -200,7 +201,7 @@
     min-height: 80vh;
   }
 
-  @media (max-width: 991px) {
+  @media (max-width: 1200px) {
     .inner-hero {
       &__boxes {
         position: static;
