--- a/src/scss/layout/_layout.scss
+++ b/src/scss/layout/_layout.scss
@@ -42,11 +42,10 @@
   margin-right: calc(-50vw + 50% + var(--scrollbar-width, 0px) / 2);
   position: relative;
 }
+
 .p-0 {
   padding: 0px !important;
 }
-
-
 
 
 .rv-breadcrumbs {
@@ -55,7 +54,8 @@
   nav.rank-math-breadcrumb {
     a {
       color: #F6F6F6;
-      &:hover{
+
+      &:hover {
         color: $secondary-color;
       }
     }
@@ -68,6 +68,48 @@
 
       span.separator {
         margin: 0 8px;
+      }
+    }
+  }
+}
+
+.error404 {
+  #content {
+    padding-top: 20vh;
+    min-height: 100vh;
+    position: relative;
+
+    &:before{
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 100%;
+      width: 100%;
+      background-image: url('/wp-content/themes/Ruined/src/img/default.png');
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: cover;
+      filter: brightness(0.5);
+    }
+
+    .wrapper_404 {
+      height: 100%;
+      width: 100%;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      .content_404 {
+        color: #fff;
+        text-align: center;
+        h1{
+          color: #fff;
+        }
       }
     }
   }
