--- a/src/scss/layout/_pages-hero.scss
+++ b/src/scss/layout/_pages-hero.scss
@@ -102,7 +102,7 @@
   &__title {
 
     p {
-      font-size: clamp(2rem, 5.5vw, 4.7rem);
+      font-size: clamp(2rem, 5.5vw, 3.5rem);
       line-height: 1.05;
       font-weight: 400;
       margin-bottom: 1.5rem;
@@ -113,7 +113,7 @@
       }
     }
 
-    font-size: clamp(2rem, 5.5vw, 4.7rem);
+    font-size: clamp(2rem, 5.5vw, 3.5rem);
     line-height: 1.05;
     font-weight: 400;
     margin-bottom: 1.5rem;
@@ -125,15 +125,16 @@
   }
 
   &__text {
-    font-size: 1.1rem;
+    font-size: 1.4rem;
     line-height: 1.2;
     margin-bottom: 2rem;
+    font-weight: 400;
     max-width: 460px;
   }
 
 
   @media (min-width: 1200px) {
-    min-height: 75vh;
+    min-height: 70vh;
 
   }
 
