--- a/src/scss/pages/services/_hero.scss
+++ b/src/scss/pages/services/_hero.scss
@@ -60,6 +60,7 @@
     margin: 0 auto;
     padding: 1rem;
     height: 100%;
+    max-width: 100%;
   }
 
   &__content {
@@ -209,11 +210,12 @@
     min-height: 95vh;
   }
 
-  @media (max-width: 991px) {
+  @media (max-width: 1200px) {
     .service-hero {
       &__boxes {
         position: static;
         margin-top: 1.5rem;
+        max-width: 100%;
         flex-wrap: wrap;
       }
 
