--- a/src/scss/woocommerce/_woocommerce.scss
+++ b/src/scss/woocommerce/_woocommerce.scss
@@ -39,8 +39,25 @@
 }
 
 
-.single-product ,.woocommerce-cart,.woocommerce-checkout {
+.single-product {
   main {
     padding-top: 10vh;
+  }
+}
+
+.woocommerce-cart, .woocommerce-checkout {
+  main {
+    .pages-hero {
+      min-height: 45vh;
+    }
+  }
+}
+
+.woocommerce-checkout {
+  max-width: 100% !important;
+  padding: 0 !important;
+  #content {
+    #main {
+    }
   }
 }
