list product head ele,ments

--- a/src/scss/components/items/_item-product.scss
+++ b/src/scss/components/items/_item-product.scss
@@ -122,6 +122,10 @@
     background: #fff;
     margin-top: auto;
     height: 13vh;
+
+    .list_stock{
+      display: none;
+    }
   }
 
   &__tag {
