--- a/src/scss/base/_forms.scss
+++ b/src/scss/base/_forms.scss
@@ -10,7 +10,7 @@ input[type='number'],
 input[type='search'],
 input[type='url'],
 select,
-textarea {
+textarea, .woocommerce form .form-row .input-text, .woocommerce form .form-row select {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
@@ -24,6 +24,27 @@ textarea {
   color: #111827;
   border-bottom: 1px solid rgba(0, 0, 0, 0.16);
   transition: border-color 0.18s ease, box-shadow 0.18s ease;
+}
+
+.wc-block-components-form .wc-block-components-text-input input[type=email],.wc-blocks-components-select .wc-blocks-components-select__select, .wc-block-components-form .wc-block-components-text-input input[type=number], .wc-block-components-form .wc-block-components-text-input input[type=password], .wc-block-components-form .wc-block-components-text-input input[type=tel], .wc-block-components-form .wc-block-components-text-input input[type=text], .wc-block-components-form .wc-block-components-text-input input[type=url], .wc-block-components-text-input input[type=email], .wc-block-components-text-input input[type=number], .wc-block-components-text-input input[type=password], .wc-block-components-text-input input[type=tel], .wc-block-components-text-input input[type=text], .wc-block-components-text-input input[type=url]{
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  margin-bottom: 10px;
+  width: 100%;
+  border: none;
+  border-radius: 0;
+  background: transparent;
+  padding: 0.5rem 0;
+  font: inherit;
+  color: #111827;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.16);
+  transition: border-color 0.18s ease, box-shadow 0.18s ease;
+}
+
+
+.woocommerce form .show-password-input::before, .woocommerce-page form .show-password-input::before{
+  display: none;
 }
 
 
