--- a/src/scss/woocommerce/_woocommerce.scss
+++ b/src/scss/woocommerce/_woocommerce.scss
@@ -29,6 +29,10 @@
 }
 
 
+.wc-blocks-components-select .wc-blocks-components-select__container {
+  background: transparent;
+}
+
 .single-product {
   main {
     padding-top: 10vh;
@@ -46,6 +50,7 @@
 .woocommerce-checkout {
   max-width: 100% !important;
   padding: 0 !important;
+
   #content {
     #main {
     }
