--- a/src/scss/pages/services/_characteristics.scss
+++ b/src/scss/pages/services/_characteristics.scss
@@ -99,6 +99,9 @@
 
   /* Responsive */
   @media (max-width: 1024px) {
+    &__bg {
+      display: none;
+    }
     &__inner {
       grid-template-columns: 1fr;
       gap: 60px;
