--- a/src/scss/blocks/_extra-services-boxes.scss
+++ b/src/scss/blocks/_extra-services-boxes.scss
@@ -1,7 +1,7 @@
 @use "../abstracts" as *;
 
 .extra-services-boxes {
-  padding: clamp(3rem, 4vw, 6rem) clamp(1rem, 4vw, 2rem) clamp(1rem, 4vw, 2rem);
+  padding: clamp(3rem, 4vw, 6rem) clamp(0rem, 0vw, 2rem) clamp(1rem, 4vw, 2rem);
 
   &__inner {
     margin: 0 auto;
@@ -118,6 +118,6 @@
   }
 
   .service-box {
-    padding: 15px;
+    padding: 0;
   }
 }
