--- a/src/scss/blocks/_grid-services.scss
+++ b/src/scss/blocks/_grid-services.scss
@@ -41,7 +41,7 @@
   }
 
   &__title {
-    font-size: clamp(24px, 3.4vw, 50px);
+    font-size: clamp(24px, 2.4vw, 50px);
     line-height: 1.15;
     font-weight: 400;
     color: #111;
@@ -121,6 +121,9 @@
     padding-bottom: 3rem;
     margin: 0 -1rem;
     padding: 0 1rem 3rem;
+    margin-right: calc(-50vw + 50% + var(--scrollbar-width, 0px) / 2) !important;
+
+
 
     @media (max-width: 991px) {
       display: block !important;
@@ -128,6 +131,7 @@
 
     .swiper-wrapper {
       align-items: stretch;
+      padding-bottom: 2rem;
     }
 
     .swiper-slide {
