--- a/src/scss/components/header/_mobile-menu.scss
+++ b/src/scss/components/header/_mobile-menu.scss
@@ -4,6 +4,19 @@
    BASE MENU
    ========================= */
 
+#menu:not(.mm-menu) {
+  display: none !important;
+  visibility: hidden !important;
+  opacity: 0 !important;
+}
+
+body.mm-wrapper #menu {
+  display: block !important;
+  visibility: visible !important;
+  opacity: 1 !important;
+}
+
+
 #menu {
   position: fixed;
   inset: 0;
@@ -12,18 +25,17 @@
   height: 99vh;
   top: 10px;
   overflow: clip;
-  opacity: 0;
-  pointer-events: none;
-}
-.mm-wrapper--opened #menu {
-  opacity: 1;
-  pointer-events: auto;
 }
 
-.mm-wrapper--opened .mm-page {
-  height: 100vh;
-  overflow: hidden !important;
-  touch-action: none;
+.mm-menu.mm-menu--offcanvas {
+  position: fixed !important;
+  top: 0 !important;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 10000;
+  height: 98vh !important; /* Χρήση 100vh για να καλύπτει όλη την οθόνη */
+  height: 98dvh !important; /* Modern browsers */
 }
 
 /* =========================
@@ -33,6 +45,11 @@
 .mm-menu--position-left-front {
   transform: translateX(-100%);
   transition: transform 0.45s cubic-bezier(0.4, 0, 0.2, 1);
+  top: 10px !important;
+  height: calc(100dvh - 20px) !important;
+  margin-left: 0;
+  border-radius: 20px;
+  overflow: hidden;
 }
 
 /* OPEN */
@@ -58,9 +75,21 @@
 .mm-wrapper--opened {
   background-color: rgba(0, 0, 0, 0.35);
   backdrop-filter: blur(4px);
-  overscroll-behavior: none;
+  overflow: hidden !important;
+  position: fixed;
+  width: 100%;
 }
 
+.mm-wrapper__blocker {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.4);
+  backdrop-filter: blur(4px);
+  z-index: 9999;
+}
 
 /* =========================
    WIDTH (NO SIDE EFFECTS)
