--- a/src/scss/blocks/_faq-section.scss
+++ b/src/scss/blocks/_faq-section.scss
@@ -107,6 +107,8 @@
       display: flex;
       align-items: center;
       justify-content: center;
+      flex-basis: auto;
+      flex-shrink: 0;
 
       svg {
         transition: transform .3s ease;
