--- a/src/scss/blocks/_scroll-video.scss
+++ b/src/scss/blocks/_scroll-video.scss
@@ -3,7 +3,8 @@
 .rv-scroll-video-wrapper {
   margin-bottom: -1px;
   position: relative;
-  min-height: 250vh;
+  height: 100vh;
+
   .rv-scroll-video {
     position: relative;
     width: 100% !important;
