--- a/src/scss/components/_search_pop_up.scss
+++ b/src/scss/components/_search_pop_up.scss
@@ -319,7 +319,7 @@ SEARCH POPUP STYLING (Custom)
 .search-results {
   height: 55vh;
   overflow-y: auto !important;
-  padding: 12px;
+  padding: 0;
 
   .dgwt-wcas-suggestions-wrapp {
     width: 100% !important;
