--- a/src/scss/woocommerce/_list.scss
+++ b/src/scss/woocommerce/_list.scss
@@ -66,7 +66,7 @@
       border: none;
       outline: none;
 
-      &:focus{
+      &:focus {
         border: none;
         outline: none;
       }
@@ -108,7 +108,7 @@
         font-weight: 500;
 
         &:hover {
-         color: $secondary-color;
+          color: $secondary-color;
         }
       }
     }
@@ -197,7 +197,10 @@ body:not(.shop-filters-hidden) {
 
 .shop-view-grid {
   ul.products {
-    @apply grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-8;
+    @media screen and (min-width: 1541px) {
+      grid-template-columns: repeat(4, minmax(0, 1fr));
+    }
+    @apply grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-3 gap-8;
     &::before {
       display: none;
     }
@@ -212,7 +215,7 @@ body:not(.shop-filters-hidden) {
         font-size: 10px;
       }
 
-      &__stock{
+      &__stock {
         font-size: 12px;
       }
 
@@ -256,10 +259,12 @@ body.shop-view-list {
     &:after {
       display: none;
     }
-    &:hover{
+
+    &:hover {
       background: #fff;
     }
-    &__link{
+
+    &__link {
       width: 100%;
       display: flex;
       align-items: center;
@@ -328,8 +333,6 @@ body.shop-view-list {
     justify-self: end;
   }
 }
-
-
 
 
 @media (max-width: 768px) {
