account page scss

--- a/src/scss/woocommerce/_index.scss
+++ b/src/scss/woocommerce/_index.scss
@@ -3,6 +3,7 @@
 @forward 'cart';
 @forward 'woocommerce';
 @forward 'checkout';
+@forward 'account';
 @forward 'filters';
 @forward 'offcanvas-cart';
 @forward 'notifications';
