--- a/src/scss/blocks/_home-services.scss
+++ b/src/scss/blocks/_home-services.scss
@@ -5,6 +5,7 @@
   background: linear-gradient(360deg, rgba(255, 255, 255, 0) 37.83%, #D5D5D5 200.55%);
   border-radius: 1rem;
   margin-bottom: clamp(30px, 5vw, 6rem);
+  margin-top: 3rem;
 
   .container {
     padding: 0 2rem;
