--- a/src/scss/base/_forms.scss
+++ b/src/scss/base/_forms.scss
@@ -182,3 +182,17 @@ textarea:focus {
   }
 }
 
+
+.wpcf7 form.invalid .wpcf7-response-output, .wpcf7 form.unaccepted .wpcf7-response-output, .wpcf7 form.payment-required .wpcf7-response-output {
+  background: #ffb900;
+  border: none;
+  border-radius: 4px;
+}
+
+.wpcf7 form.sent .wpcf7-response-output{
+  background: #46b450;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+}
+
