--- a/src/scss/woocommerce/_list.scss
+++ b/src/scss/woocommerce/_list.scss
@@ -8,6 +8,9 @@
   gap: 1.5rem;
   margin-bottom: 2rem;
   color: $primary-color;
+  position: sticky;
+  top: 3%;
+  z-index: 99;
 
   .archive_head_item {
     background: #fff;
@@ -127,7 +130,7 @@
   .shop-filters-hidden {
 
     .shop-sidebar {
-      transform: translateX(-110%);
+      transform: translateX(-150%);
       opacity: 0;
       pointer-events: none;
     }
@@ -140,6 +143,8 @@
 
 .shop-sidebar {
   transition: transform .35s ease, opacity .25s ease;
+  position: sticky;
+  top: 15%;
 }
 
 /* ===   SHOP SIDEBAR ANIMATION  === */
@@ -160,6 +165,7 @@
 .shop_content {
   margin-left: 25%;
   transition: margin .45s cubic-bezier(.4, 0, .2, 1);
+  background: #f6f6f6;
 }
 
 body.shop-filters-hidden {
@@ -168,7 +174,7 @@ body.shop-filters-hidden {
   }
 
   .shop_sidebar {
-    transform: translateX(-110%);
+    transform: translateX(-150%);
     opacity: 1;
     pointer-events: none;
   }
@@ -185,6 +191,7 @@ body:not(.shop-filters-hidden) {
   .shop_content {
     margin-left: 25%;
     transition-delay: 0s;
+    background: #f6f6f6;
   }
 
   .shop_sidebar {
@@ -243,6 +250,7 @@ body.shop-view-list {
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    background: #f6f6f6;
   }
 
   .rv-product-card {
@@ -334,6 +342,23 @@ body.shop-view-list {
   }
 }
 
+.rv-load-more-wrap {
+  display: flex;
+  justify-content: center;
+  margin: 8vh 0;
+
+  .button-arrow__arrow--back, .button-arrow__arrow--front {
+    transform: translateY(0) rotate(90deg);
+  }
+
+  .button-arrow:hover .button-arrow__arrow--back {
+    transform: translateY(0) rotate(90deg);
+  }
+
+  .button-arrow:hover .button-arrow__arrow--front {
+    transform: translateY(20px) rotate(90deg);
+  }
+}
 
 @media (max-width: 768px) {
   .products {
