--- a/src/scss/woocommerce/_list.scss
+++ b/src/scss/woocommerce/_list.scss
@@ -204,8 +204,9 @@ body:not(.shop-filters-hidden) {
 
 .shop-view-grid {
   ul.products {
+    column-gap: 1rem !important;
     @media screen and (min-width: 1541px) {
-      grid-template-columns: repeat(4, minmax(0, 1fr));
+      grid-template-columns: repeat(4, minmax(0, 1fr)) !important;
     }
     @apply grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-3 gap-8;
     &::before {
